2009-12-19 Holger Vogt
 * main.c, inpcom.c: source file path added as additional search path for
   opening .include files (MS Windows only).
   measure.c: .meas only when -b and -r are not set
   fteext.h: cleanup of unused entries
   breakp2.c, dotcards.c, inp.c, main.c: comments added

2009-12-17 Dietmar Warning
 * devices/bsim3/b3set.c: add the ngspice specific copyNodesets approach and remove
   the tnom celsius -> kelvin transformation
 * devices/bsim3/b3mpar.c: make the tnom celsius -> kelvin transformation in first run
 * devices/bsim3v32/b3v32ld.c: reconstruct NEWCONV code, also if it is not 
   used because macro is set in macros.h, but is now inline with UCB code
 * inpcom.c, spicenum.c, xpressn.c: prevent int to unsigned compare
 * tests/transmission/ibm2.cir: wrong cpl model instantiation

2009-12-12 Holger Vogt
 * runcoms: evaluate measure commands only when avaialble
 * /examples/transimpedanceamp/output.net: correct .plot statement
 * string.c: '^' added to is_arith_char(), to allow parsing of '^' in
   .func function definitions
 
2009-12-11 Holger Vogt
 * bug 2909730, patch for parsing expressions applied
 * measure.c: Proper warning that .measure is not available in batch mode with -b

2009-12-10 Dietmar Warning
 * spicelib/parser/inptree.c: omit some debug printf's  

2009-12-07 Holger Vogt
 * windisp.c: allow setting of linewidth by keyboard "set xbrushwidth=3"
 * main.c: option -p "run in pipe mode" added (patch 1465202)

2009-12-05: Dietmar Warning
 * inpcom.c, line 3090: allow parameter without curly braces in subckt definition
   (e.g.: as1=as), there was a wrong memory access before

2009-11-29 Holger Vogt
 * com_hardcopy.c, postsc.c, windisp.c: plotting with black or white background,
   postscript to file with hardcopy command or menue entry from plot window
   (still buggy with X11)
   psmodel.c: changed the declarator to new format

2009-11-27 Dietmar Warning